Final Update Version of RandomUser implementation!

--- a/app/public/about.html
+++ b/app/public/about.html
@@ -42,8 +42,9 @@
 
       <div id="pii">
         <h1>{{userName}}</h1>
-        <h1>{{formatDate(userDob)}}</h1>
-        <h1>{{userAge}}</h1>
+        <h2>{{userCountry}}</h2>
+        <h3>{{formatDate(userDob)}}</h3>
+        <h3>{{userAge}}</h3>
         <a v-bind:href = "'mailto:' + userEmail">{{userEmail}}</a>
         <a v-bind:href = "userImgLarge">
           <img v-bind:src = "userImgThumb">
