--- a/app/public/books.html
+++ b/app/public/books.html
@@ -30,6 +30,12 @@
             <li class="nav-item">
               <a class="navbar-brand" href="books.html">Books</a>
             </li>
+
+            <!--Comments-->
+            <li class="nav-item">
+              <a class="nav-link" href="comments.html">Comments</a>
+            </li>
+
           </ul>
         </div>
         </nav>
