--- a/app/public/comments.html
+++ b/app/public/comments.html
@@ -58,7 +58,7 @@
       </table>
 
     <!-- Push Comments -->
-    <form v-on:submit.prevent="createComment()" id="newCommentForm">
+    <form v-on:submit="createComment()" id="newCommentForm">
       <div class="comments">
         <label for="newComment"> Post a Comment to the List! </label>
         <input type="textarea" v-model="newCom.commentText" class="form-control" id="newComment">
